--- a/style/menu.css
+++ b/style/menu.css
@@ -190,7 +190,7 @@ html.maximized #menu #menu-buttons
 
 #menu .menu-entry, #menu .menu-dropdown, #menu-buttons #minimize, #menu-buttons #maximize, #menu-buttons #close, #menu span
 {
-	transition: .2s ease-in-out;
+	transition: .2s background-color ease-in-out, .2s color ease-in-out, .2s filter ease-in-out!important;
 }
 
 #menu .menu-dropdown span
