--- a/style/mobile.css
+++ b/style/mobile.css
@@ -113,8 +113,6 @@
 		border-radius: 0!important;
 		max-width: 100%!important;
 		white-space: normal;
-		font-size: 46px!important;
-		padding: 10px 25px;
 		margin-bottom: 0px;
 		box-shadow: none;
 	}
@@ -320,14 +318,6 @@
 	{
 		grid-template-columns: calc(100% - max(20%, 140px) - 20px) max(20%, 140px);
 		margin: 40px 0;
-	}
-
-	.wrapper
-	{
-		width: 100%;
-		left: -25px;
-		position: relative;
-		padding: 0 25px;
 	}
 
 	.table
